# MTM-Dashboard

mtm_guarantee_dashboard/: README.md  app.py  pyproject.toml
mtm_guarantee_dashboard/src/mtm_guarantee/: __init__.py  config.py
mtm_guarantee_dashboard/src/mtm_guarantee/capital/: liquidity.py  loss_dist.py  rating_capital.py  returns.py  stack.py
mtm_guarantee_dashboard/src/mtm_guarantee/credit/: default_model.py  dependence.py
mtm_guarantee_dashboard/src/mtm_guarantee/guarantee/: contract.py  payout.py
mtm_guarantee_dashboard/src/mtm_guarantee/instruments/: ccs.py  mtm_proxy.py  ndf.py
mtm_guarantee_dashboard/src/mtm_guarantee/io/: excel_loader.py  validation.py
mtm_guarantee_dashboard/src/mtm_guarantee/market/: correlations.py  fx.py  rates.py  simulation.py
mtm_guarantee_dashboard/src/mtm_guarantee/reporting/: charts.py  tables.py  tearsheet.py
mtm_guarantee_dashboard/tests/: test_core.py
